--- a/assets/styles/admin/components/_grid.scss
+++ b/assets/styles/admin/components/_grid.scss
@@ -2,11 +2,6 @@
   position: relative;
   width: 100%;
   padding: 0 2.5vw;
-
-  &.mt_1{
-    margin-top: 2.5rem;
-  }
-
 }
 
 .p-row{
@@ -35,6 +30,9 @@
 
 }
 
+.mt_1{
+  margin-top: 2.5rem;
+}
 
 .p-content-body{
   position: relative;
