--- a/assets/styles/admin/components/_icon.scss
+++ b/assets/styles/admin/components/_icon.scss
@@ -205,3 +205,9 @@
 .icon-log-in:before {
   content: "\33";
 }
+.icon-pencil-square:before {
+  content: "\34";
+}
+.icon-photo:before {
+  content: "\35";
+}
