--- a/assets/styles/admin/components/_variables.scss
+++ b/assets/styles/admin/components/_variables.scss
@@ -8,6 +8,9 @@ $color-text: #a0a0a2;
 $color-icon: #5e5f62;
 $color-white: #ffffff;
 $border-color:#414247;
+$color-green: #18a523;
+$color-orange: #f77913;
+
 $error: #e01700;
 
 // Fonts
