search and edit remmaped

--- a/assets/styles/admin/components/_variables.scss
+++ b/assets/styles/admin/components/_variables.scss
@@ -7,6 +7,7 @@ $color-dark-2: #1b1c22;
 $color-text: #a0a0a2;
 $color-icon: #5e5f62;
 $color-white: #ffffff;
+$color-black: #000;
 $border-color:#414247;
 $color-green: #18a523;
 $color-orange: #f77913;
