--- a/assets/styles/admin/components/_global.scss
+++ b/assets/styles/admin/components/_global.scss
@@ -95,3 +95,21 @@ ul,ol{
   font-weight: 500;
   margin-bottom: 0.75em;
 }
+
+
+.global-enter,.global-leave, .global-leave-to{
+  transform: scale(0.8);
+  transform-origin: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0;
+}
+
+.global-enter-to{
+  transform: none;
+}
+
+.global-enter-active, .global-leave-active{
+  transition: all 0.4s ease;
+}
