--- a/assets/styles/admin/components/_button.scss
+++ b/assets/styles/admin/components/_button.scss
@@ -19,6 +19,7 @@
   &:hover, &:focus, &:active{
     box-shadow: 1px 1px 10px $color-primary;
     background-color: darken($color-primary, 2%);
+    color: $color-white;
   }
 
   &[disabled]{
@@ -31,6 +32,122 @@
     display: inherit;
     margin-right: 10px;
   }
+}
+
+.btn_danger{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  line-height: 1;
+  padding: 0.75em 1.5em;
+  border-radius: 0.25em;
+  border: none;
+  outline: none;
+  background-color: $error;
+  font-size: 1vw;
+  font-weight: 500;
+  color: $color-white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+
+  &:hover, &:focus, &:active{
+    box-shadow: 1px 1px 10px $error;
+    background-color: darken($error, 2%);
+    color: $color-white;
+  }
+
+  &[disabled]{
+    pointer-events: none;
+    background: hsl(231deg 11% 17%);
+    color: hsl(0deg 0% 58%);
+  }
+
+  i{
+    display: inherit;
+    margin-right: 10px;
+  }
+  
+  &.plane_{
+    i{
+      margin-right: 0;
+    }
+  }
+}
+
+.btn_blue{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  line-height: 1;
+  padding: 0.75em 1.5em;
+  border-radius: 0.25em;
+  border: none;
+  outline: none;
+  background-color: $color-secondary;
+  font-size: 1vw;
+  font-weight: 500;
+  color: $color-white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+
+  &:hover, &:focus, &:active{
+    box-shadow: 1px 1px 10px $color-secondary;
+    background-color: darken($color-secondary, 2%);
+    color: $color-white;
+  }
+
+  &[disabled]{
+    pointer-events: none;
+    background: hsl(231deg 11% 17%);
+    color: hsl(0deg 0% 58%);
+  }
+
+  i{
+    display: inherit;
+    margin-right: 10px;
+  }
+}
+
+.btn_green{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  line-height: 1;
+  padding: 0.75em 1.5em;
+  border-radius: 0.25em;
+  border: none;
+  outline: none;
+  background-color: $color-green;
+  font-size: 1vw;
+  font-weight: 500;
+  color: $color-white;
+  cursor: pointer;
+  transition: all 0.3s ease;
+
+  &:hover, &:focus, &:active{
+    box-shadow: 1px 1px 10px $color-green;
+    background-color: darken($color-green, 2%);
+    color: $color-white;
+  }
+
+  &[disabled]{
+    pointer-events: none;
+    background: hsl(231deg 11% 17%);
+    color: hsl(0deg 0% 58%);
+  }
+
+  i{
+    display: inherit;
+    margin-right: 10px;
+  }
+
+  
 }
 
 
