--- a/assets/styles/admin/components/_icon.scss
+++ b/assets/styles/admin/components/_icon.scss
@@ -11,6 +11,7 @@
 
 }
 
+
 [data-icon]:before {
   font-family: "pingo-admin" !important;
   content: attr(data-icon);
@@ -240,4 +241,22 @@
 }
 .icon-whatsapp-2:before {
   content: "\26";
+}
+.icon-facebook-square-brands:before {
+  content: "\27";
+}
+.icon-twitter-square-brands:before {
+  content: "\28";
+}
+.icon-pinterest-square:before {
+  content: "\29";
+}
+.icon-linkedin-brands:before {
+  content: "\2a";
+}
+.icon-instagram:before {
+  content: "\2b";
+}
+.icon-instagram-1:before {
+  content: "\2c";
 }
