--- a/assets/styles/admin/components/_mixin.scss
+++ b/assets/styles/admin/components/_mixin.scss
@@ -40,3 +40,10 @@
     font-size: 36px;
   }
 }
+
+@mixin lgText2 {
+  font-size: 2.5vw;
+  @media only screen and (max-width:1200px){
+    font-size: 42px;
+  }
+}
