--- a/assets/styles/admin/components/_grid.scss
+++ b/assets/styles/admin/components/_grid.scss
@@ -2,6 +2,10 @@
   position: relative;
   width: 100%;
   padding: 0 2.5vw;
+
+  @media only screen and (max-width:767px){
+    padding: 0 20px;
+  }
 }
 
 .p-row{
@@ -41,6 +45,11 @@
   padding: 2rem;
   background-color: $color-dark;
   border-radius: 2em;
+
+  @media only screen and (max-width:767px){
+    padding: 1.25rem;
+    border-radius: 1.25em;
+  }
 }
 
 
