--- a/assets/styles/admin/components/_mixin.scss
+++ b/assets/styles/admin/components/_mixin.scss
@@ -37,13 +37,13 @@
 @mixin lgText {
   font-size: 2vw;
   @media only screen and (max-width:1200px){
-    font-size: 36px;
+    font-size: 8vw;
   }
 }
 
 @mixin lgText2 {
   font-size: 2.5vw;
   @media only screen and (max-width:1200px){
-    font-size: 42px;
+    font-size: 10vw;
   }
 }
