--- a/assets/styles/admin/components/_grid.scss
+++ b/assets/styles/admin/components/_grid.scss
@@ -47,8 +47,8 @@
   border-radius: 2em;
 
   @media only screen and (max-width:767px){
-    padding: 1.25rem;
-    border-radius: 1.25em;
+    padding: 0.75rem;
+    border-radius: 1em;
   }
 }
 
@@ -59,6 +59,11 @@
   display: block;
   width: 100%;
   background-color: $color-dark;
+
+  @media only screen and (max-width:767px){
+    height: 125vw;
+    overflow: scroll;
+  }
 
   .table_head{
       position: relative;
@@ -237,6 +242,21 @@
 
     .table_body{
       &>li{grid-template-columns: 2fr 2fr 1fr;}
+
+    }
+  }
+   &.mob_{
+    .table_head{
+      grid-template-columns:0.25fr 1.25fr;
+    }
+
+    .table_body{
+      &>li{grid-template-columns:0.25fr 1.25fr;
+        label{
+          display: block;
+          line-height: 1.8;
+        }
+      }
 
     }
   }
