--- a/assets/styles/admin/components/_grid.scss
+++ b/assets/styles/admin/components/_grid.scss
@@ -25,7 +25,12 @@
   .p-col-3{grid-column: span 3;}
   .p-col-4{grid-column: span 4;}
   .p-col-5{grid-column: span 5;}
-  .p-col-6{grid-column: span 6;}
+  .p-col-6{
+    grid-column: span 6;
+    @media only screen and (max-width:767px){
+      grid-column: 1/-1;
+    }
+  }
   .p-col-7{grid-column: span 7;}
   .p-col-8{grid-column: span 8;}
   .p-col-9{grid-column: span 9;}
@@ -268,6 +273,10 @@
   align-items: center;
   justify-content: space-between;
 
+  @media only screen and (max-width:767px){
+    flex-wrap: wrap;
+  }
+
   h3{
     position: relative;
     font-weight: 500;
@@ -285,6 +294,10 @@
       padding: 0.5em;
       border-radius: 0.15em;
     }
+
+    @media only screen and (max-width:767px){
+      width: 100%;
+    }
   }
 
   .button_wrapper{
@@ -298,6 +311,16 @@
       margin: 0 5px;
     }
 
+    @media only screen and (max-width:767px){
+      width: 100%;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+      .btn_{
+        margin: 10px 5px 0;
+      }
+      
+    }
+    
   }
 
 }
